OPENNLP-1091: Fixing some issues found with FindBugs and IDE
closes #229